--- a/index.html
+++ b/index.html
@@ -37,16 +37,35 @@
       <button id="nestedCloseFolder">X</button>
   </div>
   <div id="nestedFolderContent">
-      <p>Test, test, test.</p>
+      <h4 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">EXTENDED ABSTRACTS</h4>
+      <div class="citation">
+        <div class="citation-year">2024</div>
+        <div class="citation-details">
+          <div class="citation-title">
+            <a href="https://www.inforum.pt/static/files/papers/INForum_2024_paper_29.pdf" target="_blank" class="fullcite">
+              Linear Calculi for Programming Languages: a comparison approach
+            </a>
+          </div>
+          <div class="citation-authors">
+            Ana Jorge Almeida, Sandra Alves, Mário Florido
+          </div>
+          <div class="citation-event">
+            <i>INForum: Informatics symposium</i>
+          </div>
+        </div>
+      </div>
   </div>
 </div>
   <!-- Toolbar --> 
   <div id="toolbar">
+    <a href="https://orcid.org/0009-0007-7860-7311" target="_blank" class="toolbarIcon">
+      <img src="Icons/orcid-icon.png" alt="ORCID">
+    </a>
     <a href="https://github.com/anathegrey" target="_blank" class="toolbarIcon">
       <img src="Icons/github-icon.png" alt="GitHub">
     </a>
-    <a href="https://orcid.org/0009-0007-7860-7311" target="_blank" class="toolbarIcon">
-      <img src="Icons/orcid-icon.png" alt="ORCID">
+    <a href="https://app.thestorygraph.com/profile/anathegrey" target="_blank" class="toolbarIcon">
+      <img src="Icons/storygraph.png" alt="Storygraph">
     </a>
   </div>
 
