--- a/index.html
+++ b/index.html
@@ -19,14 +19,20 @@
       <span id="folderTitle">info</span>
       <button id="closeFolder">X</button>
   </div>
-  <div id="folderContent">
-      <p>Test, test, test.</p>
-
+  <div id="folderContent" >
+    <div class="photo-text-container">
+      <img src="Photo/Photo.jpg" alt="Photo" class="photo">
+      <div class="description">
+        <h3>DCC-FCUP &#x2223; LIACC</h3>
+        <p>functional programming, λ-calculus, substructural type systems, operational semantics & compilers.</p>
+      </div>
+    </div>
       <!-- Publications Folder -->
       <div class="nested-folder" id="publicationsFolder">
           <img src="Icons/folder-icon.png" alt="Publications Folder" id="nestedFolderIcon">
           <div id="nestedFolderText">publications</div>
       </div>
+    </div>
   </div>
 </div>
 
