--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       <button id="nestedCloseFolder">X</button>
   </div>
   <div id="nestedFolderContent">
-      <h4 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">EXTENDED ABSTRACTS</h4>
+
+      <!-- Extended Abstracts --> 
+      <h4 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">Extended Abstracts</h4>
       <div class="citation">
         <div class="citation-year">2024</div>
         <div class="citation-details">
@@ -60,6 +62,23 @@
           </div>
         </div>
       </div>
+
+      <!-- MSc Thesis -->
+      <h4 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">MSc Thesis</h4>
+      <div class="citation">
+        <div class="citation-year">2024</div>
+        <div class="citation-details">
+          <div class="citation-title">
+            <a href="https://repositorio-aberto.up.pt/bitstream/10216/164137/2/700562.pdf" target="_blank" class="fullcite">
+              Linear Calculi: a comparison approach
+            </a>
+          </div>
+          <div class="citation-authors">
+            Supervised by Mário Florido and Sandra Alves
+          </div>
+        </div>
+      </div>
+
   </div>
 </div>
   <!-- Toolbar --> 
