--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div id="nestedFolderContent">
 
       <!-- Extended Abstracts --> 
-      <h3 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">Extended Abstracts</h3>
+      <h3 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">Short papers</h3>
       <div class="citation">
         <div class="citation-year">2024</div>
         <div class="citation-details">
