--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="Photo/Photo.jpg" alt="Photo" class="photo">
       <div class="description">
         <h3>DCC-FCUP &#x2223; LIACC</h3>
-        <p>functional programming, λ-calculus, substructural type systems, operational semantics & compilers.</p>
+        <p>functional programming, λ-calculus, substructural type systems, resource calculi.</p>
       </div>
     </div>
       <!-- Publications Folder -->
