--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img src="Photo/Photo.jpg" alt="Photo" class="photo">
       <div class="description">
         <h3>DCC-FCUP &#x2223; LIACC</h3>
-        <p>functional programming, λ-calculus, substructural type systems, resource calculi.</p>
+        <p>functional programming, λ-calculus, type systems, resource calculi.</p>
       </div>
     </div>
       <!-- Publications Folder -->
@@ -46,6 +46,20 @@
 
       <!-- Extended Abstracts --> 
       <h3 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">Short papers</h3>
+      <div class="citation">
+        <div class="citation-year">2025</div>
+        <div class="citation-details">
+          <div class="citation-title">
+            Expansion in a Calculus with Explicit Substitutions (accepted)
+          </div>
+          <div class="citation-authors">
+            Ana Jorge Almeida, Sandra Alves, Mário Florido
+          </div>
+          <div class="citation-event">
+            <i>TYPES: 31st International Conference on Types for Proofs and Programs</i>
+          </div>
+        </div>
+      </div>
       <div class="citation">
         <div class="citation-year">2024</div>
         <div class="citation-details">
