--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
         <div class="citation-year">2025</div>
         <div class="citation-details">
           <div class="citation-title">
-            Expansion in a Calculus with Explicit Substitutions (accepted)
+            <a href="https://msp.cis.strath.ac.uk/types2025/abstracts/TYPES2025_paper53.pdf" target="_blank" class="fullcite">
+              Expansion in a Calculus with Explicit Substitutions 
+            </a>
+            (accepted)
           </div>
           <div class="citation-authors">
             Ana Jorge Almeida, Sandra Alves, Mário Florido
