--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="citation-year">2025</div>
         <div class="citation-details">
           <div class="citation-title">
-            <a href="https://msp.cis.strath.ac.uk/types2025/abstracts/TYPES2025_paper53.pdf" target="_blank" class="fullcite">
+            <a href="https://msp.cis.strath.ac.uk/types2025/TYPES2025-book-of-abstract.pdf#page=42" target="_blank" class="fullcite">
               Expansion in a Calculus with Explicit Substitutions 
             </a>
           </div>
