--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,5 @@
-   <!-- Extended Abstracts --> 
-      <h3 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">Extended abstracts</h3>
+<!-- Extended Abstracts --> 
+      <h3>Extended abstracts</h3>
       <div class="citation">
         <div class="citation-year">2025</div>
         <div class="citation-details">
@@ -18,7 +18,7 @@
       </div>
 
       <!-- Short papers --> 
-      <h3 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">Short papers</h3>
+      <h3>Short papers</h3>
       <div class="citation">
         <div class="citation-year">2024</div>
         <div class="citation-details">
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <h3 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">Presentations</h3>
+      <h3>Presentations</h3>
       <div class="citation">
         <div class="citation-year">2025</div>
         <div class="citation-details">
@@ -52,7 +52,7 @@
       </div>
 
       <!-- MSc Thesis -->
-      <h3 style="color: #c7c3c3; font-weight: bold; margin-top: 20px;">MSc Thesis</h3>
+      <h3>MSc Thesis</h3>
       <div class="citation">
         <div class="citation-year">2024</div>
         <div class="citation-details">
