--- a/publications.html
+++ b/publications.html
@@ -1,3 +1,22 @@
+<!-- Conference papers --> 
+      <h3>Conference papers</h3>
+      <div class="citation">
+        <div class="citation-year">2024</div>
+        <div class="citation-details">
+          <div class="citation-title">
+            <a href="https://2024.inforum.pt/static/files/papers/INForum_2024_paper_29.pdf" target="_blank" class="fullcite">
+              Linear Calculi for Programming Languages: a comparison approach
+            </a>
+          </div>
+          <div class="citation-authors">
+            Ana Jorge Almeida, Sandra Alves, Mário Florido
+          </div>
+          <div class="citation-event">
+            <i>INForum: Informatics symposium</i>
+          </div>
+        </div>
+      </div>
+
 <!-- Extended Abstracts --> 
       <h3>Extended abstracts</h3>
       <div class="citation">
@@ -17,25 +36,7 @@
         </div>
       </div>
 
-      <!-- Short papers --> 
-      <h3>Short papers</h3>
-      <div class="citation">
-        <div class="citation-year">2024</div>
-        <div class="citation-details">
-          <div class="citation-title">
-            <a href="https://www.inforum.pt/static/files/papers/INForum_2024_paper_29.pdf" target="_blank" class="fullcite">
-              Linear Calculi for Programming Languages: a comparison approach
-            </a>
-          </div>
-          <div class="citation-authors">
-            Ana Jorge Almeida, Sandra Alves, Mário Florido
-          </div>
-          <div class="citation-event">
-            <i>INForum: Informatics symposium</i>
-          </div>
-        </div>
-      </div>
-
+<!-- Presentations --> 
       <h3>Presentations</h3>
       <div class="citation">
         <div class="citation-year">2025</div>
