--- a/index.html
+++ b/index.html
@@ -24,10 +24,23 @@
       <div class="photo-text-container">
         <img src="Photo/Photo.jpg" alt="Photo" class="photo" />
         <div class="description">
-          <h3><a href="https://www.dcc.fc.up.pt/site/">DCC-FCUP</a> &#x2223; <a href="https://liacc.fe.up.pt/liaccwp/">LIACC</a></h3>
-          <p>functional programming, λ-calculus, type systems, resource calculi.</p>
+	  <p>I am a PhD student in Computer Science at <a href="https://www.dcc.fc.up.pt/site/">DCC-FCUP</a>, under the supervision of <a href="https://sigarra.up.pt/fcup/en/FUNC_GERAL.FORMVIEW?p_codigo=238703">Mário Florido</a> and <a href="https://sigarra.up.pt/fcup/en/FUNC_GERAL.FORMVIEW?p_codigo=245584">Sandra Alves</a>, and a researcher at <a href="https://liacc.fe.up.pt/liaccwp/">LIACC</a>.</p>
+	  <p>Overall, my research focuses on providing a foundation for safer computations where resources are carefully managed, through the use of intersection types.</p>
         </div>
       </div>
+      <p style="line-height: 3;">I also work as a teaching assistant at <a href="https://sigarra.up.pt/fcup/en/WEB_PAGE.INICIAL">FCUP</a>.</p>
+      <ul>
+	<li><a href="https://sigarra.up.pt/fcup/pt/ucurr_geral.ficha_uc_view?pv_ocorrencia_id=570454">Programming I</a></li>
+      </ul>
+      <hr style="margin: 30px 0; border: none; border-top: 1px solid #ccc;" />
+
+<div class="meme-section">
+  <p style="margin-bottom: 10px; font-weight: bold; font-size: 0.9rem; color:#3b3b3b; text-align: center;">
+   "Your strength has returned, but the weakness still remains."
+  </p>
+  <img src="Photo/meme.jpeg" alt="Linear types meme" class="meme" style="max-width: 400px; width: 100%; height: auto; display: block; margin: 0 auto;" />
+</div>
+
     </div>
   </div>
 
