--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
   <div id="menuLinks">
     <span id="infoLink">info</span>
     <span id="publicationsLink">publications</span>
+    <span id="teachingLink">teaching</span>
   </div>
 
   <!-- Info Window -->
-  <div id="folderWindow" class="folder-window draggable" style="display: none;">
-    <div id="folderHeader">
-      <span id="folderTitle">info</span>
-      <button id="closeFolder">X</button>
+  <div id="infoWindow" class="folder-window draggable" style="display: none;">
+    <div id="infoHeader">
+      <span id="infoTitle">info</span>
+      <button id="infoCloseFolder">X</button>
     </div>
-    <div id="folderContent">
+    <div id="infoContent">
       <div class="photo-text-container">
         <img src="Photo/Photo.jpg" alt="Photo" class="photo" />
         <div class="description">
@@ -28,32 +29,33 @@
 	  <p>My research focuses on providing a foundation for safer computations where resources are carefully managed, through the use of intersection types.</p>
         </div>
       </div>
-      <p style="line-height: 3;">I also work as a teaching assistant at <a href="https://sigarra.up.pt/fcup/en/WEB_PAGE.INICIAL">FCUP</a>.</p>
-      <ul>
-	<li><a href="https://sigarra.up.pt/fcup/pt/ucurr_geral.ficha_uc_view?pv_ocorrencia_id=570454">Programming I</a></li>
-      </ul>
       <hr style="margin: 30px 0; border: none; border-top: 1px solid #ccc;" />
-
-<div class="meme-section">
-  <p style="margin-bottom: 10px; font-weight: bold; font-size: 0.9rem; color:#3b3b3b; text-align: center;">
-   "Your strength has returned, but the weakness still remains."
-  </p>
-  <img src="Photo/meme.jpeg" alt="Linear types meme" class="meme" style="max-width: 400px; width: 100%; height: auto; display: block; margin: 0 auto;" />
-</div>
 
     </div>
   </div>
 
   <!-- Publications Window -->
-  <div id="nestedFolderWindow" class="folder-window draggable" style="display: none;">
-    <div id="nestedFolderHeader">
-      <span id="nestedFolderTitle">publications</span>
-      <button id="nestedCloseFolder">X</button>
+  <div id="pubWindow" class="folder-window draggable" style="display: none;">
+    <div id="pubHeader">
+      <span id="pubTitle">publications</span>
+      <button id="pubCloseFolder">X</button>
     </div>
-    <div id="nestedFolderContent">
+    <div id="pubContent">
       <!-- Content loaded from publications.html -->
     </div>
   </div>
+  
+   <!-- Teaching Window -->
+  <div id="teachWindow" class="folder-window draggable" style="display: none;">
+    <div id="teachHeader">
+      <span id="teachTitle">teaching</span>
+      <button id="teachCloseFolder">X</button>
+    </div>
+    <div id="teachContent">
+      <!-- Content loaded from teaching.html -->
+    </div>
+  </div>
+  
 
   <!-- Toolbar -->
   <div id="toolbar">
@@ -62,6 +64,9 @@
     </a>
     <a href="https://github.com/anathegrey" target="_blank" class="toolbarIcon">
       <img src="Icons/github-icon.png" alt="GitHub" />
+    </a>
+    <a href="https://www.linkedin.com/in/ana-jorge-almeida/" target="_blank" class="toolbarIcon">
+      <img src="Icons/linkedin.png" alt="LinkedIn" />
     </a>
     <a href="https://app.thestorygraph.com/profile/anathegrey" target="_blank" class="toolbarIcon">
       <img src="Icons/storygraph.png" alt="Storygraph" />
