--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="nameText" data-name="Ana Jorge Almeida">Ana Jorge Almeida</div>
     <div id="contactInfo">
       <p>anaj.almeida [at] fc.up.pt</p>
-      <p>Universidade do Porto</p>
+      <p>PhD student, Universidade do Porto</p>
     </div>
   </div>
 
