--- a/publications.html
+++ b/publications.html
@@ -31,13 +31,26 @@
             Ana Jorge Almeida, Sandra Alves, Mário Florido
           </div>
           <div class="citation-event">
-            <i>TYPES: 31st International Conference on Types for Proofs and Programs</i>
+            <i>TYPES: 31st International Conference on Types for Proofs and Programs (Glasgow, UK)</i>
           </div>
         </div>
       </div>
 
 <!-- Presentations --> 
-      <h3>Presentations</h3>
+      <h3>Talks</h3>
+       <div class="citation">
+        <div class="citation-year">2026</div>
+        <div class="citation-details">
+          <div class="citation-title">
+            <a href="https://w3.math.uminho.pt/DiL2026/DiL26_Booklet_of_Abstracts.pdf#page=8">
+              On the relation between a calculus with explicit substitutions and a resource calculus
+            </a>
+          </div>
+          <div class="citation-event">
+            <i>Days in Logic 2026 (Braga, Portugal)</i>
+          </div>
+        </div>
+      </div>
       <div class="citation">
         <div class="citation-year">2025</div>
         <div class="citation-details">
