--- a/teaching.html
+++ b/teaching.html
@@ -1,4 +1,4 @@
 <ul>
-  <li>Fall 2025. <a href="https://sigarra.up.pt/fcup/pt/ucurr_geral.ficha_uc_view?pv_ocorrencia_id=570454">Programming I</a>.</li>
+  <li>Fall 2025. <a href="https://sigarra.up.pt/fcup/en/UCURR_GERAL.FICHA_UC_VIEW?pv_ocorrencia_id=570454">Programming I</a>.</li>
   <p>Teaching Assistant, Faculdade de Ciências da Universidade do Porto.</p>
 </ul>
