--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Text-based navigation links -->
   <div id="menuLinks">
     <span id="infoLink">info</span>
-    <span id="publicationsLink">publications</span>
+    <span id="publicationsLink">research</span>
     <span id="teachingLink">teaching</span>
   </div>
 
