--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- Publications Window -->
   <div id="pubWindow" class="folder-window draggable" style="display: none;">
     <div id="pubHeader">
-      <span id="pubTitle">publications</span>
+      <span id="pubTitle">research</span>
       <button id="pubCloseFolder">X</button>
     </div>
     <div id="pubContent">
