--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
       </div>
 
 <!-- Presentations --> 
-      <h3>Talks</h3>
+      <h3>Presentations</h3>
        <div class="citation">
         <div class="citation-year">2026</div>
         <div class="citation-details">
