--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,5 @@
 <!-- Conference papers --> 
-      <h3>Conference papers</h3>
+<h3>Conference papers</h3>
       <div class="citation">
         <div class="citation-year">2024</div>
         <div class="citation-details">
@@ -16,7 +16,7 @@
           </div>
         </div>
       </div>
-
+<hr class="section-divider">
 <!-- Extended Abstracts --> 
       <h3>Extended abstracts</h3>
       <div class="citation">
@@ -36,6 +36,7 @@
         </div>
       </div>
 
+<hr class="section-divider">
 <!-- Presentations --> 
       <h3>Presentations</h3>
        <div class="citation">
@@ -65,6 +66,7 @@
         </div>
       </div>
 
+<hr class="section-divider">
       <!-- MSc Thesis -->
       <h3>MSc Thesis</h3>
       <div class="citation">
